// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Destructive story renders snapshot 1`] = `
<button
  class="button sizeMedium variantFlat colorAlert"
  type="button"
>
  ​
  Button
</button>
`;

exports[`<Button /> Link story renders snapshot 1`] = `
<button
  class="button variantLink colorBrand"
  type="button"
>
  ​
  Link Button
</button>
`;

exports[`<Button /> Primary story renders snapshot 1`] = `
<button
  class="button sizeMedium variantFlat colorBrand"
  type="button"
>
  ​
  Button
</button>
`;

exports[`<Button /> PrimarySmall story renders snapshot 1`] = `
<button
  class="button sizeSmall variantFlat colorBrand"
  type="button"
>
  ​
  Button
</button>
`;

exports[`<Button /> Secondary story renders snapshot 1`] = `
<button
  class="button sizeMedium variantOutline colorBrand"
  type="button"
>
  ​
  Button
</button>
`;

exports[`<Button /> SecondarySmall story renders snapshot 1`] = `
<button
  class="button sizeSmall variantOutline colorBrand"
  type="button"
>
  ​
  Button
</button>
`;

exports[`<Button /> Tertiary story renders snapshot 1`] = `
<button
  class="button sizeMedium variantOutline colorNeutral"
  type="button"
>
  ​
  Button
</button>
`;

exports[`<Button /> TertiarySmall story renders snapshot 1`] = `
<button
  class="button sizeSmall variantOutline colorNeutral"
  type="button"
>
  ​
  Button
</button>
`;

exports[`<Button /> flatWithOnlyIcon story renders snapshot 1`] = `
<button
  class="button sizeMedium variantFlat colorBrand"
  type="button"
>
  ​
  <svg
    class="svgIcon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      add
    </title>
    <path
      d="M18 13h-5v5c0 .55-.45 1-1 1s-1-.45-1-1v-5H6c-.55 0-1-.45-1-1s.45-1 1-1h5V6c0-.55.45-1 1-1s1 .45 1 1v5h5c.55 0 1 .45 1 1s-.45 1-1 1z"
    />
  </svg>
</button>
`;

exports[`<Button /> linkInBody story renders snapshot 1`] = `
<p
  class="typography sizeBody colorBase"
>
  This text surrounds the 
  <button
    class="button variantLink colorBrand"
    type="button"
  >
    ​
    Link Button
  </button>
   and shows that the link should adhere to its appearance
</p>
`;

exports[`<Button /> linkInHeading story renders snapshot 1`] = `
<p
  class="typography sizeH1 colorBase"
>
  This text surrounds the 
  <button
    class="button variantLink colorBrand"
    type="button"
  >
    ​
    Link Button
  </button>
   and shows that the link should adhere to its appearance
</p>
`;

exports[`<Button /> linkWithIcon story renders snapshot 1`] = `
<button
  class="button variantLink colorSuccess"
  type="button"
>
  ​
  Link with icon
   
  <svg
    aria-hidden="true"
    class="icon svgIcon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18 13h-5v5c0 .55-.45 1-1 1s-1-.45-1-1v-5H6c-.55 0-1-.45-1-1s.45-1 1-1h5V6c0-.55.45-1 1-1s1 .45 1 1v5h5c.55 0 1 .45 1 1s-.45 1-1 1z"
    />
  </svg>
</button>
`;

exports[`<Button /> outlineWithIcon story renders snapshot 1`] = `
<button
  class="button sizeMedium variantOutline colorWarning"
  type="button"
>
  ​
  Outline with icon
   
  <svg
    aria-hidden="true"
    class="icon svgIcon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18 13h-5v5c0 .55-.45 1-1 1s-1-.45-1-1v-5H6c-.55 0-1-.45-1-1s.45-1 1-1h5V6c0-.55.45-1 1-1s1 .45 1 1v5h5c.55 0 1 .45 1 1s-.45 1-1 1z"
    />
  </svg>
</button>
`;

exports[`<Button /> withDataTestId story renders snapshot 1`] = `
<button
  class="button sizeMedium variantFlat colorAlert"
  data-testid="fake-test-id"
  type="button"
>
  ​
  Button with data-testid
</button>
`;

exports[`<Button /> withFakeClassName story renders snapshot 1`] = `
<button
  class="fake-className button sizeMedium variantOutline colorWarning"
  type="button"
>
  ​
  With fake className
</button>
`;
